--- a/playbooks/08-smb/standup.yml
+++ b/playbooks/08-smb/standup.yml
@@ -11,6 +11,7 @@
       name: csi-driver-smb
       repo_url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
       state: present
+      force_update: true
 
   - name: Deploy SMB CSI Driver via Helm
     kubernetes.core.helm:
