--- a/playbooks/02-cilium/standup.yml
+++ b/playbooks/02-cilium/standup.yml
@@ -11,6 +11,7 @@
       name: cilium
       repo_url: https://helm.cilium.io/
       state: present
+      force_update: true
 
   - name: Create Cilium namespace
     kubernetes.core.k8s:
