--- a/playbooks/05-certmanager/standup.yml
+++ b/playbooks/05-certmanager/standup.yml
@@ -11,6 +11,7 @@
         name: cert-manager
         repo_url: https://charts.jetstack.io
         state: present
+        force_update: true
 
     - name: Create Cert-Manager namespace
       kubernetes.core.k8s:
