--- a/playbooks/06-externaldns/standup.yml
+++ b/playbooks/06-externaldns/standup.yml
@@ -11,6 +11,7 @@
         name: external-dns
         repo_url: https://kubernetes-sigs.github.io/external-dns/
         state: present
+        force_update: true
 
     - name: Create ExternalDNS namespace
       kubernetes.core.k8s:
