--- a/playbooks/07-ingressnginx/standup.yml
+++ b/playbooks/07-ingressnginx/standup.yml
@@ -11,6 +11,7 @@
         name: ingress-nginx
         repo_url: https://kubernetes.github.io/ingress-nginx
         state: present
+        force_update: true
 
     - name: Create Ingress-Nginx namespace
       kubernetes.core.k8s:
