--- a/playbooks/09-longhorn/standup.yml
+++ b/playbooks/09-longhorn/standup.yml
@@ -37,12 +37,14 @@
         name: longhorn
         repo_url: https://charts.longhorn.io
         state: present
+        force_update: true
 
     - name: Add OAuth2 Proxy Helm repository
       kubernetes.core.helm_repository:
         name: oauth2-proxy
         repo_url: https://oauth2-proxy.github.io/manifests
         state: present
+        force_update: true
 
     - name: Create Longhorn namespace
       kubernetes.core.k8s:
