--- a/renovate.json
+++ b/renovate.json
@@ -26,25 +26,17 @@
   "packageRules": [
     {
       "description": "Group all Helm chart updates together",
-      "matchDatasources": [
-        "helm"
-      ],
+      "matchDatasources": ["helm"],
       "groupName": "Helm charts"
     },
     {
       "description": "Group all Docker image updates together",
-      "matchDatasources": [
-        "docker"
-      ],
+      "matchDatasources": ["docker"],
       "groupName": "Docker images"
     },
     {
       "description": "Automerge patch updates for non-major dependencies",
-      "matchUpdateTypes": [
-        "patch",
-        "pin",
-        "digest"
-      ],
+      "matchUpdateTypes": ["patch", "pin", "digest"],
       "automerge": true,
       "automergeType": "pr",
       "platformAutomerge": true
@@ -52,222 +44,39 @@
     {
       "description": "Group Kubernetes-related updates",
       "groupName": "Kubernetes",
-      "schedule": [
-        "before 10am on monday"
-      ],
-      "matchPackageNames": [
-        "/^kubernetes/",
-        "/^k8s/",
-        "/kubectl/",
-        "/^k3s/"
-      ]
+      "schedule": ["before 10am on monday"],
+      "matchPackageNames": ["/^kubernetes/", "/^k8s/", "/kubectl/", "/^k3s/"]
     },
     {
       "description": "Group Cilium updates",
       "groupName": "Cilium",
-      "schedule": [
-        "before 10am on monday"
-      ],
-      "matchPackageNames": [
-        "/^cilium/"
-      ]
+      "schedule": ["before 10am on monday"],
+      "matchPackageNames": ["/^cilium/"]
     }
   ],
   "customManagers": [
     {
       "customType": "regex",
-      "description": "Update Docker images in Helm values files (nested image.repository + image.tag)",
-      "managerFilePatterns": [
-        "/(^|/)charts/.+/values\\.ya?ml$/"
-      ],
+      "description": "Update versions in centralized versions.yml using inline renovate comments",
+      "managerFilePatterns": ["/(^|/)versions\\.ya?ml$/"],
       "matchStrings": [
-        "image:\\s*\\n\\s*repository:\\s*[\"']?(?<depName>[^\\s\"'\\n]+)[\"']?\\s*\\n\\s*tag:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
+        "#\\s*renovate:\\s*datasource=(?<datasource>[a-z-]+)\\s+depName=(?<depName>[^\\s]+)(?:\\s+registryUrl=(?<registryUrl>[^\\s]+))?(?:\\s+extractVersion=(?<extractVersion>[^\\s]+))?(?:\\s+versioning=(?<versioning>[^\\s]+))?\\s*\\n\\s*(?:chart_version|[\\w_]+):\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
+      ]
+    },
+    {
+      "customType": "regex",
+      "description": "Update Docker images in Helm values files",
+      "managerFilePatterns": ["/(^|/)charts/.+/values\\.ya?ml$/"],
+      "matchStrings": [
+        "image:\\s*\\n\\s*repository:\\s*[\"']?(?<depName>[^\\s\"'\\n]+)[\"']?\\s*\\n\\s*tag:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?",
+        "repository:\\s*[\"']?(?<depName>(?:lscr\\.io|ghcr\\.io|docker\\.io|quay\\.io|plexinc)[^\\s\"'\\n/]*(?:/[^\\s\"'\\n]+)?)[\"']?\\s*\\n\\s*tag:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
       ],
       "datasourceTemplate": "docker"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Docker images in Helm values (images block with nested containers)",
-      "managerFilePatterns": [
-        "/(^|/)charts/.+/values\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "repository:\\s*[\"']?(?<depName>(?:lscr\\.io|ghcr\\.io|docker\\.io|quay\\.io)[^\\s\"'\\n]+)[\"']?\\s*\\n\\s*tag:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "datasourceTemplate": "docker"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Docker images (simple repo/tag pattern)",
-      "managerFilePatterns": [
-        "/(^|/)charts/.+/values\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "repository:\\s*[\"']?(?<depName>plexinc/[^\\s\"'\\n]+)[\"']?\\s*\\n\\s*tag:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "datasourceTemplate": "docker"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Cilium chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/cilium\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "cilium",
-      "registryUrlTemplate": "https://helm.cilium.io",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update MetalLB chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/metallb\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "metallb",
-      "registryUrlTemplate": "https://metallb.github.io/metallb",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update cert-manager chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/certmanager\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "cert-manager",
-      "registryUrlTemplate": "https://charts.jetstack.io",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update external-dns chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/externaldns\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "external-dns",
-      "registryUrlTemplate": "https://kubernetes-sigs.github.io/external-dns",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update ingress-nginx chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/ingressnginx\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "ingress-nginx",
-      "registryUrlTemplate": "https://kubernetes.github.io/ingress-nginx",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Longhorn chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/longhorn\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "longhorn",
-      "registryUrlTemplate": "https://charts.longhorn.io",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update csi-driver-smb chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/smb\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "csi-driver-smb",
-      "registryUrlTemplate": "https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Mailu chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/mailu\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "mailu",
-      "registryUrlTemplate": "https://mailu.github.io/helm-charts",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Open WebUI chart version in inventory",
-      "managerFilePatterns": [
-        "/(^|/)inventory/.+/host_vars/.+/openwebui\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "open-webui",
-      "registryUrlTemplate": "https://helm.openwebui.com",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update OAuth2-proxy chart version in standup files",
-      "managerFilePatterns": [
-        "/(^|/)playbooks/.+/standup.*\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_ref:\\s*[\"']?oauth2-proxy/oauth2-proxy[\"']?[\\s\\S]*?chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "oauth2-proxy",
-      "registryUrlTemplate": "https://oauth2-proxy.github.io/manifests",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Authentik chart version in standup files",
-      "managerFilePatterns": [
-        "/(^|/)playbooks/.+/standup.*\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "chart_ref:\\s*[\"']?goauthentik/authentik[\"']?[\\s\\S]*?chart_version:\\s*[\"']?(?<currentValue>[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "authentik",
-      "registryUrlTemplate": "https://charts.goauthentik.io",
-      "datasourceTemplate": "helm"
-    },
-    {
-      "customType": "regex",
-      "description": "Update Longhorn CLI version in standup files",
-      "managerFilePatterns": [
-        "/(^|/)playbooks/.+/standup.*\\.ya?ml$/"
-      ],
-      "matchStrings": [
-        "longhorn_cli_version:\\s*[\"']?(?<currentValue>v[^\\s\"'\\n]+)[\"']?"
-      ],
-      "depNameTemplate": "longhorn/cli",
-      "datasourceTemplate": "github-releases"
     },
     {
       "customType": "regex",
       "description": "Update kubectl version in Dockerfile",
-      "managerFilePatterns": [
-        "/(^|/)\\.devcontainer/Dockerfile$/"
-      ],
+      "managerFilePatterns": ["/(^|/)\\.devcontainer/Dockerfile$/"],
       "matchStrings": [
         "curl -LO \"https://dl\\.k8s\\.io/release/v(?<currentValue>[^/]+)/bin/linux/amd64/kubectl\""
       ],
@@ -278,9 +87,7 @@
     {
       "customType": "regex",
       "description": "Update Helm in Dockerfile",
-      "managerFilePatterns": [
-        "/(^|/)\\.devcontainer/Dockerfile$/"
-      ],
+      "managerFilePatterns": ["/(^|/)\\.devcontainer/Dockerfile$/"],
       "matchStrings": [
         "curl https://raw\\.githubusercontent\\.com/helm/helm/(?<currentValue>v[^/]+)/scripts/get-helm-3"
       ],
@@ -290,9 +97,7 @@
     {
       "customType": "regex",
       "description": "Update base devcontainer image",
-      "managerFilePatterns": [
-        "/(^|/)\\.devcontainer/Dockerfile$/"
-      ],
+      "managerFilePatterns": ["/(^|/)\\.devcontainer/Dockerfile$/"],
       "matchStrings": [
         "ARG BASE_IMAGE_NAME=(?<depName>[^\\n]+)\\nARG BASE_IMAGE_TAG=(?<currentValue>[^\\n]+)"
       ],
