--- a/inventory/production/group_vars/all/versions.yml
+++ b/inventory/production/group_vars/all/versions.yml
@@ -2,55 +2,38 @@
 # CENTRALIZED CHART VERSIONS
 # =============================================================================
 # This file provides default chart versions for all services.
-# Individual host_vars can override these if needed.
-#
-# The canonical version source is /versions.yml at the repository root.
-# These defaults are managed by Renovate via inline comments.
+# Uses a separate 'chart_versions' namespace to avoid conflicts with host_vars.
+# Playbooks should use: {{ chart_versions.authentik | default('x.x.x') }}
 # =============================================================================
 
-# Infrastructure - Networking
-cilium:
+chart_versions:
+  # Infrastructure - Networking
   # renovate: datasource=helm depName=cilium registryUrl=https://helm.cilium.io
-  chart_version: "1.18.6"
-
-metallb:
+  cilium: "1.18.6"
   # renovate: datasource=helm depName=metallb registryUrl=https://metallb.github.io/metallb
-  chart_version: "0.15.3"
-
-ingressnginx:
+  metallb: "0.15.3"
   # renovate: datasource=helm depName=ingress-nginx registryUrl=https://kubernetes.github.io/ingress-nginx
-  chart_version: "4.14.2"
-
-externaldns:
+  ingress_nginx: "4.14.2"
   # renovate: datasource=helm depName=external-dns registryUrl=https://kubernetes-sigs.github.io/external-dns
-  chart_version: "1.20.0"
+  external_dns: "1.20.0"
 
-# Infrastructure - Security & Certs
-certmanager:
+  # Infrastructure - Security & Certs
   # renovate: datasource=helm depName=cert-manager registryUrl=https://charts.jetstack.io
-  chart_version: "v1.19.2"
-
-oauth2_proxy:
+  cert_manager: "v1.19.2"
   # renovate: datasource=helm depName=oauth2-proxy registryUrl=https://oauth2-proxy.github.io/manifests
-  chart_version: "10.1.1"
-
-authentik:
+  oauth2_proxy: "10.1.1"
   # renovate: datasource=helm depName=authentik registryUrl=https://charts.goauthentik.io
-  chart_version: "2025.12.1"
+  authentik: "2025.12.1"
 
-# Infrastructure - Storage
-longhorn:
+  # Infrastructure - Storage
   # renovate: datasource=helm depName=longhorn registryUrl=https://charts.longhorn.io
-  chart_version: "1.10.2"
-
-smb:
+  longhorn: "1.10.2"
   # renovate: datasource=helm depName=csi-driver-smb registryUrl=https://raw.githubusercontent.com/kubernetes-csi/csi-driver-smb/master/charts
-  chart_version: "1.19.1"
+  csi_driver_smb: "1.19.1"
 
-# Applications
-mailu:
+  # Applications
   # renovate: datasource=helm depName=mailu registryUrl=https://mailu.github.io/helm-charts
-  chart_version: "2.6.3"
+  mailu: "2.6.3"
 
 # CLI Tools
 cli_versions:
