--- a/playbooks/02-cilium/standup.yml
+++ b/playbooks/02-cilium/standup.yml
@@ -25,7 +25,7 @@
     kubernetes.core.helm:
       name: "{{ cilium.release_name_prefix }}-main"
       chart_ref: "cilium/cilium"
-      chart_version: "{{ cilium.chart_version }}"
+      chart_version: "{{ chart_versions.cilium }}"
       namespace: "{{ cilium.namespace }}"
       create_namespace: false
       values_files: 
