--- a/playbooks/09-longhorn/standup.yml
+++ b/playbooks/09-longhorn/standup.yml
@@ -58,7 +58,7 @@
       kubernetes.core.helm:
         name: "{{ longhorn.release_name_prefix }}-oauth2"
         chart_ref: oauth2-proxy/oauth2-proxy
-        chart_version: "{{ oauth2_proxy.chart_version }}"
+        chart_version: "{{ chart_versions.oauth2_proxy }}"
         release_namespace: "{{ longhorn.namespace }}"
         create_namespace: false
         values:
@@ -122,7 +122,7 @@
       kubernetes.core.helm:
         name: "{{ longhorn.release_name_prefix }}-main"
         chart_ref: "longhorn/longhorn"
-        chart_version: "{{ longhorn.chart_version }}"
+        chart_version: "{{ chart_versions.longhorn }}"
         namespace: "{{ longhorn.namespace }}"
         create_namespace: false
         values: 
