chore(playbooks): set changed_when to false for Helm repository tasks

--- a/playbooks/02-cilium/standup.yml
+++ b/playbooks/02-cilium/standup.yml
@@ -12,6 +12,7 @@
       repo_url: https://helm.cilium.io/
       state: present
       force_update: true
+    changed_when: false
 
   - name: Create Cilium namespace
     kubernetes.core.k8s:
