--- a/playbooks/10-mailu/standup.yml
+++ b/playbooks/10-mailu/standup.yml
@@ -11,6 +11,7 @@
       repo_url: https://mailu.github.io/helm-charts
       state: present
       force_update: true
+    changed_when: false
 
   - name: Create Mailu namespace
     kubernetes.core.k8s:
