--- a/playbooks/03-metallb/standup.yml
+++ b/playbooks/03-metallb/standup.yml
@@ -11,6 +11,7 @@
       repo_url: https://metallb.github.io/metallb
       state: present
       force_update: true
+    changed_when: false
 
   - name: Create MetalLB namespace
     kubernetes.core.k8s:
