--- a/playbooks/05-certmanager/standup.yml
+++ b/playbooks/05-certmanager/standup.yml
@@ -12,6 +12,7 @@
         repo_url: https://charts.jetstack.io
         state: present
         force_update: true
+      changed_when: false
 
     - name: Create Cert-Manager namespace
       kubernetes.core.k8s:
