--- a/playbooks/09-longhorn/standup.yml
+++ b/playbooks/09-longhorn/standup.yml
@@ -38,6 +38,7 @@
         repo_url: https://charts.longhorn.io
         state: present
         force_update: true
+      changed_when: false
 
     - name: Add OAuth2 Proxy Helm repository
       kubernetes.core.helm_repository:
@@ -45,6 +46,7 @@
         repo_url: https://oauth2-proxy.github.io/manifests
         state: present
         force_update: true
+      changed_when: false
 
     - name: Create Longhorn namespace
       kubernetes.core.k8s:
