feat(authentik): add postgresPassword to Authentik auth configuration

--- a/playbooks/11-authentik/standup.yml
+++ b/playbooks/11-authentik/standup.yml
@@ -68,6 +68,7 @@
             enabled: true
             auth:
               password: "{{ authentik.db_password }}"
+              postgresPassword: "{{ authentik.db_postgres_password }}"
               database: authentik
             persistence:
               enabled: true
