feat: Allow unverified email for OIDC in OAuth2 Proxy configuration

--- a/playbooks/09-longhorn/standup.yml
+++ b/playbooks/09-longhorn/standup.yml
@@ -78,6 +78,7 @@
             skip-provider-button: true
             set-xauthrequest: true
             reverse-proxy: true
+            insecure-oidc-allow-unverified-email: true
 
           service:
             type: ClusterIP
